--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/inventory-service
-spring.datasource.username=root
-spring.datasource.password=mysql
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/inventory-service
+#spring.datasource.username=root
+#spring.datasource.password=mysql
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:h2:mem:inventorydb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.h2.console.enabled=true
 server.port=0
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=inventory-service
