--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,3 +1,10 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/product-service
+#spring.data.mongodb.uri=mongodb://localhost:27017/product-service
+
+spring.datasource.url=jdbc:h2:mem:orderdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.h2.console.enabled=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=product-service
